iFeature Pro Changelog

****************************

Version 4.0.1 (02-05-12)
-Fixed custom slide category bug for pages.
-Fixed slider thumbs not displaying on blog index. 
-Minor CSS tweaks.
-Fixed postbar bug on single pages.
-Fixed default social icons bug.

Version 4.0 (02-03-12)
-Added Foundation CSS grid, offering both responsive and static design.
-Drag and Drop Header and Blog elements added.
-Added WordPress Template Options (404, Search, Archive, Single)
-Replaced NivoSlider with Orbit.
-Added new responsive Carousel.
-Added Left-Sidebar option.
-New design options.
-General bug and style fixes.

Version 3.1.1 (01-08-12)
-Called missing globals in page.php.
-CSS fix related to page options.

Version 3.1 (01-04-12)
-Changes to CyberChimps Core Framework. 
-Revised metabox code/styling. 
-Removed border-left on OL comment lists.
-Added Dutch, German, and Portuguese translation files. 
-Added rel=me to social icon URLs.
-Fix for comment pingbacks, moved custom comment function to Core functions file.
-Fixed callout color options, added option for callout button text color. 
-Breadcrumbs no longer blowing out pages with two sidebars, properly hiding breadcrumbs if disabled in options.
-Additional visual tweaks for WordPress 3.3.
-Moved menu JavaScript code. 
-Removed extra localization function in theme functions file. 
-Minor tweak to comments hook. 
-Minor HTML markup tweaks.
-Removed 404 image.
-Fixed slider caption bug on index page. 
-Fixed BBPress bug.

Version 3.0.4 (12-09-11)
-Removed cursor: pointer; from all iMenu css. 
-Fixed menu grid variable when search and home button are disabled. 
-Removed special charcters filter from Custom CSS option.
-Added class to archive title H2 tags. 
-Fixed post formats icon bug. 
-Added link hover color option.
-jQuery no-conflict fix.
-Centered theme options panel, added WordPress 3.3 fix. 
-Button shortcode css. 

Version 3.0.3 (12-01-11)
-Various IE visual fixes.
-General bug fixes and style changes. 
